syntax = "proto3";
package labeler;

service LabelerService {
    rpc LabelNode(NodeLabel) returns (Info) {}
    rpc LabelPod(PodLabel) returns (Info) {}
}

message NodeLabel {
    string node = 1;
    string label = 2;
    string kubeConfig = 3;
    string opType = 4;
    string opPath = 5;
}

message PodLabel {
    string namespace = 1;
    string pod = 2;
    string label = 3;
    string kubeConfig = 4;
    string opType = 5;
    string opPath = 6;
}

message Info {
    string info = 1;
}